change form so buttons redirect to signup page

--- a/assets/index.css
+++ b/assets/index.css
@@ -65,7 +65,11 @@ main * {
 }
 
 .form-group {
-  margin-bottom: 20px;
+  margin-bottom: 5px;
+  width: 100%;
+}
+
+.form-group a {
   width: 100%;
 }
 
@@ -80,18 +84,18 @@ form {
 label {
   display: block;
   margin-bottom: 5px;
-  width: 80%;
+  width: 100%;
 }
 
 input {
-  width: 80%;
+  width: 100%;
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f9f9f9;
 }
 
-button {
+#signin, #signup {
   width: 90%;
   border: none;
   border-radius: 5px;
@@ -100,22 +104,22 @@ button {
   font-weight: 600;
 }
 
-button[type="submit"] {
+#signin {
   background-color: var(--purple);
   color: #fff;
 }
 
-button[type="submit"]:hover {
+#signin:hover {
   background-color: #634e7e;
 }
 
-button[type="button"] {
+#signup {
   background-color: #fff;
   color: var(--purple);
   border: 1px solid var(--purple);
 }
 
-button[type="button"]:hover {
+#signup:hover {
   background-color: #f5f5f5;
 }
 
