--- a/stylesheets/feed.css
+++ b/stylesheets/feed.css
@@ -1,7 +1,16 @@
+@import "base.css";
+
+.page_title {
+  color: rgba(108, 117, 125, 1);
+  display: flex;
+  align-items: center;
+}
 .card_jobs {
   border: 1px solid grey;
   border-radius: 4px;
-  width: 29%;
+  width: 100%;
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 .card_jobs img {
@@ -28,9 +37,17 @@
   margin-left: 16px;
 }
 .description_card {
+  display: flex;
   color: rgba(33, 37, 41, 1);
 }
 .footer_card_text {
   margin-left: 16px;
   color: rgba(108, 117, 125, 1);
+}
+
+.wrapper {
+  display: grid;
+  column-gap: 16px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(100px, auto);
 }
