--- a/stylesheets/feed.css
+++ b/stylesheets/feed.css
@@ -1,10 +1,105 @@
 @import "base.css";
 
-.page_title {
-  color: rgba(108, 117, 125, 1);
+main {
+  margin: 10px;
+}
+
+#breadcrumbs {
+  font-size: 14px;
+  margin: 5px 0;
+  color: #999;
+}
+
+#breadcrumbs a {
+  color: #999;
+  text-decoration: none;
+  transition: color 0.2s;
+}
+
+#breadcrumbs a:hover {
+  color: #333;
+}
+
+#breadcrumbs span::before {
+  content: ">";
+  margin: 0 5px;
+}
+
+.wrapper {
   display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.card {
+  width: calc(33.33% - 50px);
+  box-sizing: border-box;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 20px;
+  text-decoration: none;
+  color: #000;
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 20px;
+}
+
+.card img {
+  width: 100%;
+  max-height: 40%;
+}
+.card-title,
+.card-description,
+.card-footer {
+  margin: 0 35px;
+}
+
+.card-title {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
 }
+.card-position {
+  font-size: large;
+}
+.card-level {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  padding: 5px;
+}
+
+.jr {
+  background-color: rgba(25, 134, 84, 0.5);
+}
+
+.pl {
+  background-color: rgba(237, 241, 24, 0.5);
+}
+
+.sr {
+  background-color: rgba(241, 24, 24, 0.5);
+}
+
+.card-description,
+.card-footer {
+  margin-bottom: 20px;
+}
+
+.card-footer {
+  color: #6c757d;
+}
+
+/* .wrapper {
+  display: grid;
+  column-gap: 16px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: minmax(100px, auto);
+}
+
+
 .card_jobs {
   border: 1px solid grey;
   border-radius: 4px;
@@ -43,11 +138,8 @@
 .footer_card_text {
   margin-left: 16px;
   color: rgba(108, 117, 125, 1);
-}
+} */
 
-.wrapper {
-  display: grid;
-  column-gap: 16px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(100px, auto);
+footer {
+  position: sticky;
 }
