--- a/stylesheets/community.css
+++ b/stylesheets/community.css
@@ -70,6 +70,19 @@ main {
   height: 20px;
   padding: 5px;
 }
+
+.jr {
+  background-color: rgba(25, 134, 84, 0.5);
+}
+
+.pl {
+  background-color: rgba(237, 241, 24, 0.5);
+}
+
+.sr {
+  background-color: rgba(241, 24, 24, 0.5);
+}
+
 .card-description,
 .card-footer {
   margin-bottom: 20px;
@@ -77,4 +90,26 @@ main {
 
 .card-footer {
   color: #6c757d;
+}
+
+.banner {
+  background-color: #dbd5b2;
+  display: flex;
+  flex-direction: row;
+  margin-left: 64px;
+  margin-left: 64px;
+}
+
+#mackenzielogo {
+  width: 60px;
+  height: 60px;
+  margin-left: 16px;
+}
+.banner img {
+  width: 100%;
+  max-height: 10%;
+}
+
+footer {
+  position: sticky;
 }
