--- a/stylesheets/jobopportunity.css
+++ b/stylesheets/jobopportunity.css
@@ -1,23 +1,17 @@
 @import "base.css";
 
 main {
-  color: rgba(108, 117, 125, 1);
-  margin-left: 54px;
-  font-feature-settings: "liga" off;
-  font-family: Montserrat;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24px;
+  margin: 10px;
 }
-h1 {
+
+#title {
   color: var(--purple, #54426b);
   font-family: Poppins;
   font-size: 32px;
   line-height: normal;
   text-transform: uppercase;
-  margin-top: 0; /* Remover espaço superior */
-  margin-bottom: 0; /* Remover espaço inferior */
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 #communityrow {
