--- a/stylesheets/feed.css
+++ b/stylesheets/feed.css
@@ -4,27 +4,6 @@ main {
   margin: 10px;
 }
 
-#breadcrumbs {
-  font-size: 14px;
-  margin: 5px 0;
-  color: #999;
-}
-
-#breadcrumbs a {
-  color: #999;
-  text-decoration: none;
-  transition: color 0.2s;
-}
-
-#breadcrumbs a:hover {
-  color: #333;
-}
-
-#breadcrumbs span::before {
-  content: ">";
-  margin: 0 5px;
-}
-
 .wrapper {
   display: flex;
   justify-content: space-between;
@@ -92,54 +71,7 @@ main {
   color: #6c757d;
 }
 
-/* .wrapper {
-  display: grid;
-  column-gap: 16px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: minmax(100px, auto);
-}
-
-
-.card_jobs {
-  border: 1px solid grey;
-  border-radius: 4px;
-  width: 100%;
-  margin-top: 16px;
-  margin-bottom: 16px;
-}
-
-.card_jobs img {
-  width: 100%;
-}
-
-.title_card {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  font-size: 20px;
-}
-
-.jobs_circle {
-  background-color: rgba(25, 134, 84, 0.5);
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  font-size: 12px;
-}
-
-.text_card {
-  margin-right: 16px;
-  margin-left: 16px;
-}
-.description_card {
-  display: flex;
-  color: rgba(33, 37, 41, 1);
-}
-.footer_card_text {
-  margin-left: 16px;
-  color: rgba(108, 117, 125, 1);
-} */
-
-footer {
-  position: sticky;
+.breadcrumbs span::before {
+  content: "";
+  margin: 0 5px;
 }
