--- a/stylesheets/community.css
+++ b/stylesheets/community.css
@@ -1,115 +1,20 @@
 @import "base.css";
 
-main {
-  margin: 10px;
-}
-
-#breadcrumbs {
-  font-size: 14px;
-  margin: 5px 0;
-  color: #999;
-}
-
-#breadcrumbs a {
-  color: #999;
-  text-decoration: none;
-  transition: color 0.2s;
-}
-
-#breadcrumbs a:hover {
-  color: #333;
-}
-
-#breadcrumbs span::before {
-  content: ">";
-  margin: 0 5px;
-}
-
-.wrapper {
+.community-banner {
+  margin: 20px auto;
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.card {
-  width: calc(33.33% - 50px);
-  box-sizing: border-box;
-  background-color: #fff;
-  border: 1px solid #ddd;
+  width: 90%;
   border-radius: 20px;
-  text-decoration: none;
-  color: #000;
-  font-family: "Montserrat", sans-serif;
-  margin-bottom: 20px;
-}
-
-.card img {
-  width: 100%;
-  max-height: 40%;
-}
-.card-title,
-.card-description,
-.card-footer {
-  margin: 0 35px;
-}
-
-.card-title {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.card-position {
-  font-size: large;
-}
-.card-level {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  padding: 5px;
-}
-
-.jr {
-  background-color: rgba(25, 134, 84, 0.5);
-}
-
-.pl {
-  background-color: rgba(237, 241, 24, 0.5);
-}
-
-.sr {
-  background-color: rgba(241, 24, 24, 0.5);
-}
-
-.card-description,
-.card-footer {
-  margin-bottom: 20px;
-}
-
-.card-footer {
-  color: #6c757d;
-}
-
-.banner {
   background-color: #dbd5b2;
-  display: flex;
-  flex-direction: row;
-  margin-left: 64px;
-  margin-left: 64px;
+  max-height: 100px;
 }
 
-#mackenzielogo {
-  width: 60px;
-  height: 60px;
-  margin-left: 16px;
-}
-.banner img {
-  width: 100%;
-  max-height: 10%;
-}
-
-footer {
-  position: sticky;
+#community-img {
+  width: 50%;
+  max-height: inherit;
+  border-radius: 0 20px 20px 0;
+  object-fit: cover;
+  object-position: center;
 }
